seo: add Google Search Console verification

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -5,6 +5,7 @@ const { pathname } = Astro.url;
 ---
 <html lang="fr">
   <head>
+      <meta name="google-site-verification" content="G6oz9MEzT8ry_VpEi6-OSzd_B1pyPMKTJ5mpyERmFQA" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raphael Levy</title>
